This should fix the syntax highlighter double scroll

--- a/resources/assets/sass/modules/_syntax.scss
+++ b/resources/assets/sass/modules/_syntax.scss
@@ -8,6 +8,11 @@ $code_color3:					$styleci-dark-primary !default;
 
 @import "./vendor/bower_components/SyntaxHighlighter/src/sass/shCoreDefault";
 
+.syntaxhighlighter {
+    overflow-x: scroll !important;
+    overflow-y: hidden !important;
+}
+
 .syntaxhighlighter table td.code .line {
     padding: 2px 1em !important;
 }
